# gptcpp

./: .clang-format  .clangd  .editorconfig  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
src/: bpe.cc  bpe.hh  main.cc  tokenizer.cc  tokenizer.hh
